<resources>
    <string name="app_name">P2P Messenger</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="action_account">account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="message">Message</string>
    <string name="clear_messages">clear messages</string>
    <string name="welcome">Welcome to P2P Messenger</string>
    <string name="start_text">Start sending messages in just two steps</string>
    <string name="create_an_account">Create an account</string>
    <string name="refresh">refresh</string>
    <string name="online">online</string>
    <string name="name">name</string>
    <string name="change_my_data">Change my data</string>
    <string name="sign_in">Sign in</string>
    <string name="image">image</string>
</resources>
