<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="240dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image"
        android:src="@drawable/image_login" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#07A984"
        android:textSize="25sp" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:text="@string/start_text"
        android:textColor="#95989A"
        android:textAlignment="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/nick_field"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp" />

    <EditText
        android:id="@+id/pass_field"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGrey"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"/>


    <TextView
        android:id="@+id/button_create_account"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/create_an_account"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textAlignment="center"
        android:paddingTop="9dp"
        android:background="@drawable/shape_radius"
        android:layout_marginTop="490dp"
        android:layout_alignLeft="@+id/pass_field"
        android:layout_alignStart="@+id/pass_field" />
</RelativeLayout>