<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:iconifiedByDefault="true"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_circle_white"
        android:title="@string/action_account"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        android:orderInCategory="3"
        app:showAsAction="always" />

</menu>